[package]
name = "qwatro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.27"
qwatro-port-scanner = { path = "../qwatro-port-scanner"}
tokio = { version = "1.26.0", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7.7"
